--- a/qtcreator/dictionary.ui
+++ b/qtcreator/dictionary.ui
@@ -49,118 +49,298 @@
      <number>0</number>
     </property>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="spacing">
-       <number>5</number>
-      </property>
-      <item>
-       <widget class="QComboBox" name="selectBook"/>
-      </item>
-      <item>
-       <widget class="QComboBox" name="searchMethod">
-        <item>
-         <property name="text">
-          <string>Begins with</string>
+     <widget class="MSearchToolbar" name="searchToolbar" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout_12">
+       <property name="spacing">
+        <number>4</number>
+       </property>
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>8</number>
+       </property>
+       <property name="bottomMargin">
+        <number>4</number>
+       </property>
+       <item>
+        <widget class="QComboBox" name="selectBook"/>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_6">
+         <property name="spacing">
+          <number>0</number>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Contains</string>
+         <item>
+          <widget class="QComboBox" name="searchMethod">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>108</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <item>
+            <property name="text">
+             <string>Begins with</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Contains</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Ends with</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Exactly</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="MLineEdit" name="searchField">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Ends with</string>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
          </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Exactly</string>
+         <property name="frame">
+          <bool>true</bool>
          </property>
-        </item>
-       </widget>
-      </item>
-      <item>
-       <widget class="MLineEdit" name="searchField">
-        <property name="frame">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="clearSearch">
-        <property name="text">
-         <string>X</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="clearSearch">
+         <property name="maximumSize">
+          <size>
+           <width>22</width>
+           <height>22</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>X</string>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::DelayedPopup</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </item>
     <item>
-     <widget class="QSplitter" name="splitter">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <widget class="QListWidget" name="searchResults">
-       <property name="autoFillBackground">
-        <bool>false</bool>
+     <widget class="QWidget" name="widget" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout_11">
+       <property name="spacing">
+        <number>0</number>
        </property>
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Plain</enum>
-       </property>
-       <property name="horizontalScrollBarPolicy">
-        <enum>Qt::ScrollBarAlwaysOff</enum>
-       </property>
-       <property name="showDropIndicator" stdset="0">
-        <bool>false</bool>
-       </property>
-       <property name="alternatingRowColors">
-        <bool>false</bool>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::SingleSelection</enum>
-       </property>
-       <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectRows</enum>
-       </property>
-       <property name="textElideMode">
-        <enum>Qt::ElideNone</enum>
-       </property>
-       <property name="verticalScrollMode">
-        <enum>QAbstractItemView::ScrollPerPixel</enum>
-       </property>
-       <property name="horizontalScrollMode">
-        <enum>QAbstractItemView::ScrollPerItem</enum>
-       </property>
-       <property name="viewMode">
-        <enum>QListView::ListMode</enum>
+       <property name="margin">
+        <number>0</number>
        </property>
        <item>
-        <property name="text">
-         <string>test</string>
-        </property>
+        <widget class="MSplitter" name="splitter">
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="opaqueResize">
+          <bool>false</bool>
+         </property>
+         <property name="handleWidth">
+          <number>2</number>
+         </property>
+         <property name="childrenCollapsible">
+          <bool>false</bool>
+         </property>
+         <widget class="MListWidget" name="searchResults">
+          <property name="minimumSize">
+           <size>
+            <width>175</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Plain</enum>
+          </property>
+          <property name="horizontalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
+          <property name="showDropIndicator" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="alternatingRowColors">
+           <bool>false</bool>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <property name="textElideMode">
+           <enum>Qt::ElideNone</enum>
+          </property>
+          <property name="verticalScrollMode">
+           <enum>QAbstractItemView::ScrollPerPixel</enum>
+          </property>
+          <property name="horizontalScrollMode">
+           <enum>QAbstractItemView::ScrollPerItem</enum>
+          </property>
+          <property name="viewMode">
+           <enum>QListView::ListMode</enum>
+          </property>
+         </widget>
+         <widget class="MWebView" name="entryView">
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="url">
+           <url>
+            <string>about:blank</string>
+           </url>
+          </property>
+          <property name="renderHints">
+           <set>QPainter::Antialiasing|QPainter::HighQualityAntialiasing|QPainter::SmoothPixmapTransform|QPainter::TextAntialiasing</set>
+          </property>
+         </widget>
+        </widget>
        </item>
        <item>
-        <property name="text">
-         <string>2</string>
-        </property>
+        <widget class="QWidget" name="widget_2" native="true">
+         <layout class="QVBoxLayout" name="verticalLayout_5">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <property name="margin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="MScrollBar" name="entryVerticalScrollBar">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="MCornerSpacer" name="scrollBarCorner" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>15</width>
+              <height>15</height>
+             </size>
+            </property>
+            <property name="palette">
+             <palette>
+              <active>
+               <colorrole role="Base">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Window">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+              </active>
+              <inactive>
+               <colorrole role="Base">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Window">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+              </inactive>
+              <disabled>
+               <colorrole role="Base">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Window">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+              </disabled>
+             </palette>
+            </property>
+            <property name="autoFillBackground">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </item>
-      </widget>
-      <widget class="QWebView" name="entryView">
-       <property name="url">
-        <url>
-         <string>about:blank</string>
-        </url>
-       </property>
-      </widget>
+      </layout>
      </widget>
     </item>
    </layout>
-   <zorder>splitter</zorder>
-   <zorder></zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -202,10 +382,10 @@
    </attribute>
    <addaction name="actionBack"/>
    <addaction name="actionForward"/>
-   <addaction name="actionText_Smaller"/>
-   <addaction name="actionText_Bigger"/>
+   <addaction name="actionDecreaseFontSize"/>
+   <addaction name="actionIncreaseFontSize"/>
   </widget>
-  <widget class="QToolBar" name="searchToolbar">
+  <widget class="QToolBar" name="dictionaryToolbar">
    <property name="windowTitle">
     <string>toolBar_2</string>
    </property>
@@ -243,7 +423,7 @@
     <string>Forward</string>
    </property>
   </action>
-  <action name="actionText_Smaller">
+  <action name="actionDecreaseFontSize">
    <property name="icon">
     <iconset>
      <normaloff>../../../misc/textSmaller.png</normaloff>../../../misc/textSmaller.png</iconset>
@@ -252,7 +432,7 @@
     <string>Text Smaller</string>
    </property>
   </action>
-  <action name="actionText_Bigger">
+  <action name="actionIncreaseFontSize">
    <property name="icon">
     <iconset>
      <normaloff>../../../misc/textBigger.png</normaloff>../../../misc/textBigger.png</iconset>
@@ -269,9 +449,42 @@
    <header>QtWebKit/QWebView</header>
   </customwidget>
   <customwidget>
+   <class>MWebView</class>
+   <extends>QWebView</extends>
+   <header>ui.mwebview.h</header>
+  </customwidget>
+  <customwidget>
    <class>MLineEdit</class>
    <extends>QLineEdit</extends>
    <header>ui.mlineedit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MListWidget</class>
+   <extends>QListWidget</extends>
+   <header>ui.mlistwidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MCornerSpacer</class>
+   <extends>QWidget</extends>
+   <header>ui.mcornerspacer.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MScrollBar</class>
+   <extends>QScrollBar</extends>
+   <header>ui.mscrollbar.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MSearchToolbar</class>
+   <extends>QWidget</extends>
+   <header>ui.msearchtoolbar.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MSplitter</class>
+   <extends>QSplitter</extends>
+   <header>ui.msplitter.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
