initial label rendering working

--- a/qtcreator/dictionary.ui
+++ b/qtcreator/dictionary.ui
@@ -502,6 +502,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../resources/resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
