scroll to anchor

--- a/qtcreator/dictionary.ui
+++ b/qtcreator/dictionary.ui
@@ -183,6 +183,12 @@
           <bool>false</bool>
          </property>
          <widget class="MListWidget" name="searchResults">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="minimumSize">
            <size>
             <width>175</width>
