--- a/qtcreator/dictionary.ui
+++ b/qtcreator/dictionary.ui
@@ -19,6 +19,12 @@
   <property name="windowTitle">
    <string>Dictionary</string>
   </property>
+  <property name="iconSize">
+   <size>
+    <width>32</width>
+    <height>32</height>
+   </size>
+  </property>
   <property name="animated">
    <bool>true</bool>
   </property>
@@ -67,7 +73,14 @@
         <number>4</number>
        </property>
        <item>
-        <widget class="QComboBox" name="selectBook"/>
+        <widget class="QComboBox" name="selectBook">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>26</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -87,6 +100,9 @@
              <width>108</width>
              <height>16777215</height>
             </size>
+           </property>
+           <property name="frame">
+            <bool>false</bool>
            </property>
            <item>
             <property name="text">
@@ -450,6 +466,9 @@
    <property name="toolTip">
     <string>Back</string>
    </property>
+   <property name="visible">
+    <bool>true</bool>
+   </property>
   </action>
   <action name="actionForward">
    <property name="icon">
@@ -458,6 +477,9 @@
    </property>
    <property name="text">
     <string>Forward</string>
+   </property>
+   <property name="visible">
+    <bool>true</bool>
    </property>
   </action>
   <action name="actionDecreaseFontSize">
