--- a/qtcreator/dictionary.ui
+++ b/qtcreator/dictionary.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>613</width>
-    <height>335</height>
+    <width>675</width>
+    <height>371</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -86,6 +86,9 @@
            <height>26</height>
           </size>
          </property>
+         <property name="focusPolicy">
+          <enum>Qt::StrongFocus</enum>
+         </property>
          <property name="sizeAdjustPolicy">
           <enum>QComboBox::AdjustToContents</enum>
          </property>
@@ -112,6 +115,9 @@
              <width>108</width>
              <height>16777215</height>
             </size>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::StrongFocus</enum>
            </property>
            <property name="frame">
             <bool>false</bool>
@@ -191,7 +197,7 @@
          <property name="childrenCollapsible">
           <bool>false</bool>
          </property>
-         <widget class="MListWidget" name="searchResults">
+         <widget class="MListWidget2" name="searchResults">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -392,7 +398,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>613</width>
+     <width>675</width>
      <height>22</height>
     </rect>
    </property>
@@ -633,11 +639,6 @@
    <header>ui.mwebview.h</header>
   </customwidget>
   <customwidget>
-   <class>MListWidget</class>
-   <extends>QListWidget</extends>
-   <header>ui.mlistwidget.h</header>
-  </customwidget>
-  <customwidget>
    <class>MCornerSpacer</class>
    <extends>QWidget</extends>
    <header>ui.mcornerspacer.h</header>
@@ -666,7 +667,18 @@
    <header>ui.mmacsearchbar.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>MListWidget2</class>
+   <extends>QListWidget</extends>
+   <header>ui.mlistwidget2.h</header>
+  </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>selectBook</tabstop>
+  <tabstop>searchMethod</tabstop>
+  <tabstop>searchResults</tabstop>
+  <tabstop>entryView</tabstop>
+ </tabstops>
  <resources>
   <include location="../resources/resources.qrc"/>
  </resources>
