--- a/qtcreator/dictionary.ui
+++ b/qtcreator/dictionary.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>675</width>
-    <height>371</height>
+    <width>678</width>
+    <height>409</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -56,6 +56,12 @@
     </property>
     <item>
      <widget class="MSearchToolbar" name="searchToolbar" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <layout class="QHBoxLayout" name="horizontalLayout_12">
        <property name="spacing">
         <number>4</number>
@@ -398,7 +404,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>675</width>
+     <width>678</width>
      <height>22</height>
     </rect>
    </property>
